links are shortened and number columns is correct width and text is wrapped

--- a/app/ListDoMikolaja/static/main.css
+++ b/app/ListDoMikolaja/static/main.css
@@ -153,5 +153,9 @@ body {
   }
 
   .id-col {
-      max-width: 1rem;
+      width: 1rem;
+  }
+
+  .line-item-desc {
+      word-break: break-word;
   }
